--- a/back/lang/es.ini
+++ b/back/lang/es.ini
@@ -1,6 +1,6 @@
 title = "Welcome"
 
-[FlightEvents]
+[flightEvents]
 pasport = "El informe sobre el procesamiento de información de vuelo"
 bort = "Avión"
 voyage = "Vuelo"
