--- a/back/lang/ru.ini
+++ b/back/lang/ru.ini
@@ -1,6 +1,6 @@
 title = "Добро пожаловать"
 
-[FlightEvents]
+[flightEvents]
 pasport = "Отчёт об обработке полётной информации"
 bort = "Борт"
 voyage = "Рейс"
