--- a/back/lang/ru.ini
+++ b/back/lang/ru.ini
@@ -1,5 +1,18 @@
 title = "Добро пожаловать"
 
+[calibrations]
+name = "Название"
+fdr = "FDR"
+dtCreated = "Дата создания"
+dtUpdated = "Дата последнего обновления"
+paramCode = "Код параметра"
+paramName = "Название"
+paramChannels = "Каналы"
+paramMinValue = "Мин. зн."
+paramMaxValue = "Макс. зн."
+code = "Код"
+physics = "Физика"
+
 [flightEvents]
 pasport = "Отчёт об обработке полётной информации"
 bort = "Борт"
