--- a/back/lang/en.ini
+++ b/back/lang/en.ini
@@ -1,5 +1,18 @@
 title = "Welcome"
 
+[calibrations]
+name = "Name"
+fdr = "FDR"
+dtCreated = "Creation data"
+dtUpdated = "Last updated"
+paramCode = "Parameter code"
+paramName = "Name"
+paramChannels = "Channels"
+paramMinValue = "Min value"
+paramMaxValue = "Max value"
+code = "Code"
+physics = "Physics"
+
 [flightEvents]
 pasport = "FLIGHT RECORDER ANALYSIS REPORT"
 bort = "A/C"
